<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_create_book"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextTitle_create_book"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextCategory_create_book"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextAuthor_create_book"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDescription_create_book"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave_create_book"
        android:textColorLink="#8BC34A" />
</LinearLayout>
