<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorWhite">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextTitle_update_book" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextCategory_update_book" />

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextAuthor_update_book" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDescription_update_book" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate_update_book"
        android:textColorLink="#00BCD4" />
</LinearLayout>
